--- a/Project1/Project1/Project1.csproj
+++ b/Project1/Project1/Project1.csproj
@@ -37,10 +37,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\Models\Favorites.ts" />
+    <None Remove="ClientApp\src\app\Models\MyRecipes.ts" />
     <None Remove="ClientApp\src\app\Models\Recipe.ts" />
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\Models\Favorites.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\Models\MyRecipes.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\Models\Recipe.ts" />
   </ItemGroup>
 
